# magento-graphql-docs-mcp

./: .gitignore  CLAUDE.md  README.md  SETUP.md  pyproject.toml  run-docker-mcp.sh
docker/: Dockerfile  entrypoint.sh
examples/: README.md  example_cart_checkout.py  example_customer.py  example_products.py  run_all_examples.sh
magento_graphql_docs_mcp/: __init__.py  config.py  ingest.py  parser.py  server.py
tests/: benchmark_performance.py  verify_db.py  verify_parser.py  verify_server.py
